Squish Safari flexbox bug

--- a/app/styles/_resets.scss
+++ b/app/styles/_resets.scss
@@ -5,6 +5,10 @@
   font-weight: normal;
 }
 
+html {
+  margin: 0;
+ }
+
 body {
   margin: 0;
   background: $c-brand-secondary;
