--- a/app/styles/components/components.scss
+++ b/app/styles/components/components.scss
@@ -1,7 +1,10 @@
 // Specific component layout Styles
 .logo {
+  display: -webkit-flex;
   display: flex;
+  -webkit-align-items: center;
   align-items: center;
+  // overflow: auto;
 
   > h1 {
     margin-left: 0.5rem;
